5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1644_2704.log
== TEST (2019-04-11 21:05:18) 
-- CODE:
n = float(input("digite a nota do aluno: "))
x = input("ele ganhou bonificacao : (S/N)")

X = x.lower()

if X == S:
	y = n * 0.1
	h = y + n
	print(h)
else:
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if X == S:
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:05:45) 
-- CODE:
n = float(input("digite a nota do aluno: "))
x = input("ele ganhou bonificacao : (S/N)")

X = x.lower()

if X == "S":
	y = n * 0.1
	h = y + n
	print(h)
else:
	print(n)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 21:06:01) 
-- CODE:
n = float(input("digite a nota do aluno: "))
x = input("ele ganhou bonificacao : (S/N)")

X = x.lower()

if X == "S":
	y = n * 0.1
	h = y + n
	print(h)
else:
	print(n)
-- EXECUTION TIME:
0.188669
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:06:02) 
-- CODE:
n = float(input("digite a nota do aluno: "))
x = input("ele ganhou bonificacao : (S/N)")

X = x.lower()

if X == "S":
	y = n * 0.1
	h = y + n
	print(h)
else:
	print(n)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:06:47) 
-- CODE:
n = float(input("digite a nota do aluno: "))
x = input("ele ganhou bonificacao : (S/N)")

X = x.lower()

if X == "S":
	y = n * 0.1
	h = y + n
	print(h)
else:
	print(n)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 21:07:05) 
-- CODE:
n = float(input("digite a nota do aluno: "))
x = input("ele ganhou bonificacao : (S/N)")

X = x.upper()

if X == "S":
	y = n * 0.1
	h = y + n
	print(h)
else:
	print(n)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 21:07:09) 
-- CODE:
n = float(input("digite a nota do aluno: "))
x = input("ele ganhou bonificacao : (S/N)")

X = x.upper()

if X == "S":
	y = n * 0.1
	h = y + n
	print(h)
else:
	print(n)
-- EXECUTION TIME:
0.153488
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
